crates/pixi_manifest/src/snapshots/pixi__project__manifest__system_requirements__tests__version_misspelled.snap
---
source: src/project/manifest/system_requirements.rs
expression: "\n        [system-requirements]\n        libc = { veion = \"2.12\" }\n        "
---
TOML parse error at line 3, column 16
  |
3 |         libc = { veion = "2.12" }
  |                ^^^^^^^^^^^^^^^^^^
unknown field `veion`, expected `family` or `version`
